gcc/testsuite/g++.dg/expr/dtor4.C
typedef int C;
typedef double D;

void
f ()
{
  C o;

  o.D::~C (); // { dg-error "" }
}
